--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,22 +1,4 @@
 
-.quick-settings {
-    background-color: rgba(69, 69, 69, 0.6); 
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border-radius: 20px; 
-    box-shadow: 0px 0px 18px 2px rgba(150, 150, 150, 0.4);
-    transition: background-color 0.3s ease; }
-
-    .quick-settings .icon-button, .quick-settings .login-dialog-button.cancel-button, .quick-settings .login-dialog-button.switch-user-button, .quick-settings .login-dialog-button.login-dialog-session-list-button, .quick-settings .calendar .calendar-month-header .pager-button, .calendar .calendar-month-header .quick-settings .pager-button, .quick-settings .message-notification-group .message-collapse-button, .message-notification-group .quick-settings .message-collapse-button, .quick-settings .message .message-header .message-expand-button, .message .message-header .quick-settings .message-expand-button, .quick-settings .message .message-header .message-close-button, .message .message-header .quick-settings .message-close-button, .quick-settings .screenshot-ui-show-pointer-button, .quick-settings .button {
-        background-color: rgba(50, 50, 50, 0.8);
-        box-shadow: unset rgba(150, 150, 150, 0.4);
-        padding: 10px; }
-
-    .quick-slider .icon-button, .quick-slider .login-dialog-button.cancel-button, .quick-slider .login-dialog-button.switch-user-button, .quick-slider .login-dialog-button.login-dialog-session-list-button, .quick-slider .calendar .calendar-month-header .pager-button, .calendar .calendar-month-header .quick-slider .pager-button, .quick-slider .message-notification-group .message-collapse-button, .message-notification-group .quick-slider .message-collapse-button, .quick-slider .message .message-header .message-expand-button, .message .message-header .quick-slider .message-expand-button, .quick-slider .message .message-header .message-close-button, .message .message-header .quick-slider .message-close-button, .quick-slider .screenshot-ui-show-pointer-button {
-        background-color: rgb(180, 180, 180);
-        box-shadow: 0px 0px 10px 5px  rgba(255, 255, 255, 0.4);
-        padding: 15px; }
-
 /* Top Bar */
 #panel {
     background-color: rgba(50, 50, 50, 0.9);
@@ -123,4 +105,151 @@
         border: 1px solid transparent;
         box-shadow: unset 0px 0px 18px 2px rgba(150, 150, 150, 0.4) }
 
+  
+/* Activities Ripple */
+.ripple-box {
+    background-color: rgba(10, 218, 218, 0.2);
+    box-shadow: 0 0 2px 2px rgba(104, 9, 181, 0.585);
+    width: 52px;
+    height: 52px;
+    border-radius: 0 0 52px 0; }
+    .ripple-box:rtl {
+      border-radius: 0 0 0 52px; }
+  
+  
+.quick-toggle {
+/* Move padding into the box; this is to allow menu arrows
+    to extend to the border */ }
+.quick-toggle > StBoxLayout {
+    spacing: 9px; }
+.quick-toggle.button {
+    padding: 0; } /* => Esto es para cambiar el tamaño de los botones del toggle buttons*/
+.quick-toggle-has-menu .quick-toggle:ltr {
+    border-radius: 999px 0 0 999px; }
+
+  
+
+.quick-toggle-has-menu .quick-toggle-menu-button {
+    color: #ffffff;
+    background-color: st-mix(#ffffff, #4a4a4f, 9%); }
+.quick-toggle-has-menu .quick-toggle-menu-button:focus:hover {
+    background-color: st-mix(st-mix(-st-accent-color, #ffffff, 60%), st-lighten(st-mix(#ffffff, #4a4a4f, 9%), 4%), 5%); }
+.quick-toggle-has-menu .quick-toggle-menu-button:hover {
+    color: #ffffff;
+    background-color: st-lighten(st-mix(#ffffff, #4a4a4f, 9%), 4%); }
+.quick-toggle-has-menu .quick-toggle-menu-button:checked:focus:hover {
+    background-color: st-mix(st-mix(-st-accent-color, #ffffff, 60%), st-lighten(st-mix(-st-accent-color, #ffffff, 85%), 4%), 5%); }
+.quick-toggle-has-menu .quick-toggle-menu-button:checked:hover {
+    color: -st-accent-fg-color;
+    background-color: st-lighten(st-mix(-st-accent-color, #ffffff, 85%), 4%); }
+.quick-toggle-has-menu .quick-toggle-menu-button:checked:active {
+    color: -st-accent-fg-color;
+    background-color: st-lighten(st-mix(-st-accent-color, #ffffff, 85%), 9%); }
+.quick-toggle-has-menu .quick-toggle-menu-button:checked:active:hover {
+    background-color: st-lighten(st-lighten(st-mix(-st-accent-color, #ffffff, 85%), 9%), 4%); }
+.quick-toggle-has-menu .quick-toggle-menu-button:checked:active:focus {
+    background-color: st-mix(st-mix(-st-accent-color, #ffffff, 60%), st-lighten(st-mix(-st-accent-color, #ffffff, 85%), 9%), 5%); }
+  
+  .quick-toggle-has-menu:checked .quick-toggle-separator {
+    background-color: st-mix(-st-accent-fg-color, -st-accent-color, 30%); }
+  
+  .quick-toggle-has-menu .quick-toggle-separator {
+    background-color: rgba(255, 255, 255, 0.25); }
+  
+  .quick-slider > StBoxLayout {
+    spacing: 6px; }
+  
+  .quick-slider .icon-button, .quick-slider .login-dialog-button.cancel-button, .quick-slider .login-dialog-button.switch-user-button, .quick-slider .login-dialog-button.login-dialog-session-list-button, .quick-slider .calendar .calendar-month-header .pager-button, .calendar .calendar-month-header .quick-slider .pager-button, .quick-slider .message-notification-group .message-collapse-button, .message-notification-group .quick-slider .message-collapse-button, .quick-slider .message .message-header .message-expand-button, .message .message-header .quick-slider .message-expand-button,
+  .quick-slider .message .message-header .message-close-button,
+  .message .message-header .quick-slider .message-close-button, .quick-slider .screenshot-ui-show-pointer-button {
+    padding: 6px; }
+  
+  .quick-slider .slider-bin {
+    padding: 6px;
+    border-radius: 999px; }
+    .quick-slider .slider-bin:focus {
+      color: #ffffff;
+      box-shadow: inset 0 0 0 2px st-transparentize(st-mix(-st-accent-color, #ffffff, 60%), 0.2) !important;
+      background-color: st-mix(st-mix(-st-accent-color, #ffffff, 60%), st-mix(#ffffff, #36363a, 9%), 5%); }
+      .quick-slider .slider-bin:focus:hover {
+        background-color: st-mix(st-mix(-st-accent-color, #ffffff, 60%), st-lighten(st-mix(#ffffff, #36363a, 9%), 4%), 5%); }
+  
+  .quick-toggle-menu {
+    border-radius: 24px;
+    margin: 12px 18px 0; }
+    .quick-toggle-menu:insensitive {
+      color: #ffffff;
+      background-color: st-mix(#ffffff, #36363a, 9%); }
+    .quick-toggle-menu .popup-menu-item > StIcon {
+      -st-icon-style: symbolic;
+      icon-size: 1.091em; }
+    .quick-toggle-menu .header {
+      spacing-rows: 3px;
+      spacing-columns: 12px;
+      padding-bottom: 12px; }
+      .quick-toggle-menu .header .icon {
+        icon-size: 1.6365em;
+        border-radius: 999px;
+        padding: 9px;
+        background-color: rgba(255, 255, 255, 0.2); }
+        .quick-toggle-menu .header .icon.active {
+          background-color: -st-accent-color;
+          color: -st-accent-fg-color; }
+  
+  .quick-settings-system-item > StBoxLayout {
+    spacing: 12px; }
+  
+  .quick-settings-system-item .power-item {
+    min-height: 0;
+    min-width: 0; }
+    .quick-settings-system-item .power-item:insensitive {
+      color: #ffffff;
+      background-color: st-mix(#ffffff, #36363a, 9%);
+      background-color: transparent; }
+  
+  .nm-network-item .wireless-secure-icon {
+    icon-size: 0.5455em; }
+  
+  .bt-device-item .popup-menu-icon {
+    -st-icon-style: symbolic; }
+  
+  .bt-menu-placeholder.popup-menu-item {
+    text-align: center;
+    padding: 2em 4em; }
+  
+  .device-subtitle {
+    color: rgba(255, 255, 255, 0.5); }
+  
+  .keyboard-brightness-level {
+    spacing: 6px; }
+  
+  .background-apps-quick-toggle {
+    min-height: 2.728em;
+    background-color: transparent; }
+    .background-apps-quick-toggle StIcon {
+      icon-size: 1.091em !important; }
+  
+  .background-app-item .popup-menu-icon {
+    icon-size: 32px !important;
+    -st-icon-style: regular !important; }
+  
+  .background-app-item .icon-button, .background-app-item .login-dialog-button.cancel-button, .background-app-item .login-dialog-button.switch-user-button, .background-app-item .login-dialog-button.login-dialog-session-list-button, .background-app-item .calendar .calendar-month-header .pager-button, .calendar .calendar-month-header .background-app-item .pager-button, .background-app-item .message-notification-group .message-collapse-button, .message-notification-group .background-app-item .message-collapse-button, .background-app-item .message .message-header .message-expand-button, .message .message-header .background-app-item .message-expand-button,
+  .background-app-item .message .message-header .message-close-button,
+  .message .message-header .background-app-item .message-close-button, .background-app-item .screenshot-ui-show-pointer-button {
+    padding: 6px;
+    background-color: rgba(255, 255, 255, 0.13); }
+    .background-app-item .icon-button:hover, .background-app-item .login-dialog-button.cancel-button:hover, .background-app-item .login-dialog-button.switch-user-button:hover, .background-app-item .login-dialog-button.login-dialog-session-list-button:hover, .background-app-item .calendar .calendar-month-header .pager-button:hover, .calendar .calendar-month-header .background-app-item .pager-button:hover, .background-app-item .message-notification-group .message-collapse-button:hover, .message-notification-group .background-app-item .message-collapse-button:hover, .background-app-item .message .message-header .message-expand-button:hover, .message .message-header .background-app-item .message-expand-button:hover,
+    .background-app-item .message .message-header .message-close-button:hover,
+    .message .message-header .background-app-item .message-close-button:hover, .background-app-item .screenshot-ui-show-pointer-button:hover {
+      background-color: rgba(255, 255, 255, 0.22); }
+    .background-app-item .icon-button:active, .background-app-item .login-dialog-button.cancel-button:active, .background-app-item .login-dialog-button.switch-user-button:active, .background-app-item .login-dialog-button.login-dialog-session-list-button:active, .background-app-item .calendar .calendar-month-header .pager-button:active, .calendar .calendar-month-header .background-app-item .pager-button:active, .background-app-item .message-notification-group .message-collapse-button:active, .message-notification-group .background-app-item .message-collapse-button:active, .background-app-item .message .message-header .message-expand-button:active, .message .message-header .background-app-item .message-expand-button:active,
+    .background-app-item .message .message-header .message-close-button:active,
+    .message .message-header .background-app-item .message-close-button:active, .background-app-item .screenshot-ui-show-pointer-button:active {
+      background-color: rgba(255, 255, 255, 0.31); }
+  
+  .background-app-item .spinner {
+    padding: 6px; }
+  
+  .background-app-item.popup-inactive-menu-item {
+    color: #ffffff; }
   
